k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elixir-cqrs
  labels:
    app.kubernetes.io/name: elixir-cqrs
    app.kubernetes.io/instance: production
